# Holix-Link

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
holix_link/: __init__.py  config.py  credentials.py  crypto.py  daemon.py  executor.py  pairing.py  paths.py  protocol.py  server.py  service.py
holix_link/cli/: __init__.py  main.py
scripts/: install-link.ps1  install-link.sh
tests/: test_config.py  test_daemon.py  test_executor.py  test_pairing.py  test_paths.py  test_paths_windows.py  test_protocol.py  test_service.py
